--- a/login.html
+++ b/login.html
@@ -7,8 +7,24 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="header">
+        <div class="inicio">
+        <a href="index.html"><img class="logo"src="FMO Tech Assistência (7).png"></a>
+        </div>
+        <div class="links">
+        <a href="#">serviços </a>
+        <a href="sobre.html">sobre </a>
+        <a href="#">contatos </a>
+        </div>
+    </div>
     <div class="login">
     <h3>Login</h3>
+    <form class="forms">
+        <label for="email">Email:</label><br>
+        <input type="text" id="email" name="email"><br>
+        <label for="senha">Senha:</label><br>
+        <input type="text" id="senha" name="senha">
+      </form>
     </div>
 </body>
 </html>
