Atualização do projeto

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="FMO Tech Assistência.png">
     <title>.Com Tech</title>
 </head>
-<body>
+<body class="container">
     <div class="header">
     <div class="inicio">
     <img src="FMO Tech Assistência (7).png">
