--- a/login.html
+++ b/login.html
@@ -24,6 +24,8 @@
         <input type="text" id="email" name="email"><br>
         <label for="senha">Senha:</label><br>
         <input type="text" id="senha" name="senha">
+        <label for="botao"></label><br>
+        <input type="submit" id="botao" name="botao">
       </form>
     </div>
 </body>
