--- a/sobre.html
+++ b/sobre.html
@@ -19,12 +19,12 @@
         </div>
         </div>
     <h2>Quem somos?</h2>
-    <p>Bem-vindo à .com tech - Cuidando da Tecnologia que Move Você!</p>
+    <p>Bem-vindo à .COM TECH - Cuidando da Tecnologia que Move Você!</p>
     <p>Na era digital, sabemos o quanto seus dispositivos são essenciais no dia a dia. Seja para trabalhar, estudar ou se conectar com quem você ama, contar com aparelhos funcionando perfeitamente faz toda a diferença.</p>
-    <p>É por isso que estamos aqui! Na .com Tech, oferecemos assistência técnica especializada para celulares, computadores e notebook, sempre com qualidade, rapidez e transparência. Nossa equipe é composta por profissionais altamente capacitados, prontos para diagnosticar e solucionar qualquer problema com eficiência e segurança</p>
+    <p>É por isso que estamos aqui! Na .COM TECH, oferecemos assistência técnica especializada para celulares, computadores e notebook, sempre com qualidade, rapidez e transparência. Nossa equipe é composta por profissionais altamente capacitados, prontos para diagnosticar e solucionar qualquer problema com eficiência e segurança</p>
     <p>Além do compromisso com um serviço impecável, prezamos pelo atendimento humanizado e pela confiança de nossos clientes. Aqui, cada reparo é feito com carinho e responsabilidade, garantindo a melhor experiência para você.</p>
     <p>Loja online</p>
-    <p>Seu aparelho em boas mãos. Seu tempo, valorizado. .com Tech, conectando você ao que realmente importa! 💚</p>
+    <p>Seu aparelho em boas mãos. Seu tempo, valorizado. .COM TECH, conectando você ao que realmente importa! 💚</p>
     <p>FUNCIONARIOS:</p>
     <div class="func-container">
     <div class="image">
